# davish

./: .gitignore  README.md  pyproject.toml
davish/: __init__.py  http.py  storage.py  types.py
davish/ops/: __init__.py  delete.py  get.py  head.py  options.py  propfind.py  put.py  report.py
davish/utils/: utils_app.py  utils_http.py  utils_path.py  utils_xml.py
