[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "davish"

version = "1.0.0"
readme = "README.md"
keywords = ["dav", "carddav", "caldav", "vcard", "vevent", "vcf", "ics"]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []


[project.urls]
Repository = "https://github.com/enodari/davish"